--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "Thiago Soares <tsoaresaz@gmail.com> (https://github.com/tsoaresaz)",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.25.58"
   },
   "devDependencies": {
